--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.2",
     "clsx": "^2.1.1",
     "framer-motion": "^11.16.4",
     "lenis": "^1.1.19",
